gcc/testsuite/g++.dg/template/crash31.C
// PR c++/13268

template<operator< struct A {}; // { dg-error "" }
